--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,8 @@ verify_ssl = true
 [packages]
 luigi = "*"
 twython = "*"
+persist-queue = "*"
 requests = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
