--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ twython = "*"
 persist-queue = "*"
 requests = "*"
 apache-beam = "*"
+pybossa-client = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
