Maintain config dir consistency, fix pybossa test

--- a/service_composition/mini_crawler/twitter_config_example.json
+++ b/service_composition/mini_crawler/twitter_config_example.json
@@ -1,6 +1,6 @@
 {
         "apikeys": {
-                "i0mf0rmer034": {
+                "USERNAME": {
                         "app_key": "APP_KEY",
                         "app_secret": "APP_SECRET",
                         "oauth_token": "OAUTH_TOKEN",
